--- a/.env
+++ b/.env
@@ -4,5 +4,10 @@ FLUTTERWAVE_SECRET_KEY = FLWSECK_TEST-17eb020491f3d655d87c2d6e2eee2bc5-X
 
 Encryption_key = FLWSECK_TESTc151ac549743
 
+
+LOGISTICS_BANK_CODE = 044
+
+LOGISTICS_ACCOUNT_NUMBER = 1234567890
+
  
 FLUTTERWAVE_WEBHOOK_SECRET = chopnow-secret-hash
